--- a/style.scss
+++ b/style.scss
@@ -118,6 +118,7 @@ img {
 .date {
   font-style: italic;
   color: $gray;
+  padding: 20px 0 30px 0;
 }
 
 // Specify the color of the selection
@@ -265,10 +266,6 @@ nav {
     margin-top: 10px;
   }
 
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
-  }
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
