--- a/style.scss
+++ b/style.scss
@@ -152,7 +152,7 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+  //margin-bottom: 50px;
 }
 
 .masthead {
@@ -243,7 +243,7 @@ nav {
 //
 
 .posts > .post {
-  padding-bottom: 2em;
+  padding: 0.75em 0 1em 0;
   border-bottom: 1px solid $lightGray;
 }
 
