--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
   color: $darkerGray;
   font-weight: bold;
 
-  line-height: 1.7;
+  line-height: 2.0;
   margin: 1em 0 15px;
   padding: 0;
 
@@ -65,6 +65,7 @@ h4 {
 
 p {
   margin: 15px 0;
+  line-height: 1.8;
 }
 
 a {
@@ -232,7 +233,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: $darkGray;
     }
   }
 }
