--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $raleway;
   color: $darkerGray;
-  font-weight: bold;
+  font-weight: 300;
 
   line-height: 2.0;
   margin: 1em 0 15px;
@@ -69,12 +69,9 @@ p {
 }
 
 a {
-  color: $blue;
+  color: inherit;
   text-decoration: none;
 	cursor: pointer;
-  &:hover, &:active {
-    color: $blue;
-  }
 }
 
 ul, ol {
@@ -230,11 +227,18 @@ nav {
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
+    text-decoration: none;
 
     @include mobile {
       margin: 0 10px;
       color: $darkGray;
     }
+  }
+}
+
+.page {
+  a {
+    border-bottom: 1px solid $darkGray
   }
 }
 
