--- a/style.scss
+++ b/style.scss
@@ -241,6 +241,36 @@ nav {
     border-bottom: 1px dashed $gray;
     display: inline-block;
     line-height: 0.9;
+    position: relative;
+  }
+
+  // a:after {
+  //   position: absolute;
+  // }
+
+  a:hover {
+    border-bottom: 0;
+  }
+
+  a:hover:after {
+    position: absolute;
+    content: '';
+    height: 2px;
+    bottom: -3px;
+    margin: 0 auto;
+    left: 0;
+    background: $underline-color;
+    animation-name: underline-color;
+    animation-duration: 1000ms;
+    animation-fill-mode: forwards;
+  }
+  @keyframes underline-color {
+    0% { 
+      width: 0%;
+    }
+    100% {
+      width: 100%;
+    }
   }
 }
 
