Modify the publication date style

--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,8 @@ img {
 .date {
   font-style: italic;
   color: $gray;
-  padding: 20px 0 30px 0;
+  font-size: 12px;
+  margin-bottom: 20px;
 }
 
 // Specify the color of the selection
