--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,7 @@ layout: default
   </div>
 
   <div class="date">
-    Published on {{ page.date | date: "%B %e, %Y" }}.
+    published: {{ page.date | date: "%B %e, %Y" }}
   </div>
-
-  {% include disqus.html %}
+  
 </article>
