--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/essays">Essays</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/" class="nav-link">Blog</a>
+            <a href="{{ site.baseurl }}/essays" class="nav-link">Essays</a>
+            <a href="{{ site.baseurl }}/about" class="nav-link">About</a>
           </nav>
         </header>
       </div>
