Clean up the styles

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,19 +4,16 @@
 //
 
 // Colors
-$blue: #4a5c7f;
-$underline-color: #007500;
+$primary-color: #007500;
+$secondary-color: #666;
+$background-color: #fff;
+$primary-font-color: #333;
+$secondary-font-color: #eee;
+$selection-font-color: #000;
+$heading-font-color: #222;
 
-// Grays
-$black: #000;
-$darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
-$lightGray: #eee;
-$white: #fff;
 
 // Font stacks
-$georgia: Georgia, serif;
 $raleway: "Raleway", sans-serif;
 
 // Mobile breakpoints
