Set font color to green and text background to light grey on text selection

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,7 +9,8 @@ $secondary-color: #666;
 $background-color: #fff;
 $primary-font-color: #333;
 $secondary-font-color: #eee;
-$selection-font-color: #000;
+$selection-font-color: $primary-color;
+$selection-background-color: $secondary-font-color;
 $heading-font-color: #222;
 
 
